tests/ui/traits/const-traits/specialization/const-default-impl-non-const-specialized-impl.spec.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-default-impl-non-const-specialized-impl.rs:5:27
   |
LL | #![cfg_attr(spec, feature(specialization))]
   |                           ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0119]: conflicting implementations of trait `Value` for type `FortyTwo`
  --> $DIR/const-default-impl-non-const-specialized-impl.rs:22:1
   |
LL | impl<T> const Value for T {
   | ------------------------- first implementation here
...
LL | impl Value for FortyTwo {
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `FortyTwo`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0119`.
